@@ -1,5 +1,6 @@
 gnome-shell-extension-ubuntu-dock (0.5) UNRELEASED; urgency=medium
 
+  [ Didier Roche ]
   * Cherry-pick dynamic and adaptive transparency feature to look and behave
     better with GNOME Shell 3.26. We only enable adaptive transparency.
     (LP: #1717509).
@@ -18,6 +19,10 @@ gnome-shell-extension-ubuntu-dock (0.5) UNRELEASED; urgency=medium
   * Fix uninitialized value for dock disabled by default
     (LP: #1712698, #1714219)
   * updated translations
+
+  [ Sebastien Bacher ]
+  * debian/control, debian/rules:
+    - use dh_translations, update the template during the build
 
  -- Didier Roche <didrocks@ubuntu.com>  Fri, 15 Sep 2017 14:29:42 +0200
 
